--- a/stylesheet.css
+++ b/stylesheet.css
@@ -196,10 +196,12 @@ h1 {
 .closepopup {
   position: absolute;
   font-size: 40px;
-  right: 2%;
-  top: -2%;
+  right: .8vw;
+  top: -.5vw;
   cursor: pointer;
 }
+
+
 
 .popupoverlay {
   top: 0;
@@ -220,8 +222,8 @@ h1 {
   position: fixed;
   width: 70vw;
   left: 15vw;
-  height: 90vh;
-  top: 5vh;
+  height: 70vh;
+  top: 15vh;
   border: 1px solid black;
   background-color: #F2DFD7;
   display: none;
