--- a/stylesheet.css
+++ b/stylesheet.css
@@ -291,6 +291,10 @@ h1 {
   border: 1px solid black;
 }
 
+.commentandsubmit #submit:hover {
+  background-color: #7598BD;
+}
+
 .savelink {
   color: #7598BD;
 }
@@ -321,10 +325,11 @@ h1 {
 }
 
 
-@media only screen and (max-width: 480px){
-  .mobile_text{
+@media only screen and (max-width: 720px) {
+  .mobile_text {
     display: block;
-    max-width: 80vw;
+    text-align: center;
+    width: 100%;
   }
   .desktop, canvas {
     display: none;
